<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.mitraconsignado.whattsapp.activity.ValidadorActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="16dp">

        <ImageView
            android:layout_width="@dimen/largura_logo"
            android:layout_height="@dimen/altura_logo"
            android:background="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:id="@+id/imageView2"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validacao"
            android:textColor="@color/textocolorPrimary"
            android:textSize="30sp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:text="@string/voce_recebeu_um_sms_para_valida_ao_do_seu_numero_digite_o_codigo_de_valida_ao_abaixo"
            android:textColor="@color/textocolorPrimary"
            android:textSize="12sp"
            android:id="@+id/textView2" />

        <EditText
            android:id="@+id/edit_cod_validacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/digite_o_codigo"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/textocolorPrimary" />

        <Button
            android:id="@+id/bt_validar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_cod_validacao"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/validar" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
